--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <input v-model='hobby' type="text" name="" >
       </div>
       <h1>ciao mi chiamo {{name}} e il mio cognome è {{surname}} ho {{age}} anni e nel tempo libero mi piace {{hobby}}</h1>
-      <img v-bind:src="{{immagine}}" alt="atom">
+      <img v-bind:src="immagine" alt="atom">
     </div>
 
 <!-- script -->
